Fix text-align property

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -76,7 +76,7 @@ h5 {
 p {
   margin: 0 0 28px 0;
   font-family: 'Halant', serif;  
-  text-align: justified;
+  text-align: justify;
 }
 
 strong {
